--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,7 +3,9 @@
   "general": {
     "designResolution": {
       "width": 720,
-      "height": 1280
+      "height": 1500,
+      "fitHeight": true,
+      "fitWidth": false
     }
   }
 }
