--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,9 +3,9 @@
   "general": {
     "designResolution": {
       "width": 720,
-      "height": 1500,
+      "height": 1280,
       "fitHeight": true,
-      "fitWidth": false
+      "fitWidth": true
     }
   }
 }
